2009-01-20  Elliott Baron  <ebaron@redhat.com>

	* MassifLaunchDelegate: Changed to handle multiple pids.
	* MassifOutput: New, organizes multiple snapshot arrays by pid.
	* MassifParser: Added parsing for pid.
	* MassifPidMenuAction: UI to switch between pids.
	* MassifViewPart: Added handling for multiple pids.
	* messages.properties: New key.
	* ChartEditorInput: Store pid for EditorInput caching.

2009-01-13  Elliott Baron  <ebaron@redhat.com>

	* MassifParser: Implements new abstract parser.

2009-01-09  Elliott Baron  <ebaron@redhat.com>

	* MassifSnapshot: New convenience method isDetailed().
	* MassifViewPart: Changed visibility of setTopControl to public.
	* ChartControl: Integrated with ChartRenderer, implementer of ICallBackNotifier must
	also extend Composite.
	* ChartRenderer: Deleted.
	* HeapChart: Added triggers for single click.
	* META-INF/MANIFEST.MF: Added all needed BIRT plugins to required bundles.

2009-01-08  Elliott Baron  <ebaron@redhat.com>

	* META-INF/MANIFEST.MF: Added org.eclipse.birt.device.swt to required bundles.

2009-01-05  Elliott Baron  <ebaron@redhat.com>

	* MassifViewPart: Chart now opens upon launch; EditorInput is cached once
	created.
	* ChartControl: Catches ChartException.
	* ChartRenderer: First attempt at callbacks
	* HeapChart: Likewise.
	* META-INF/MANIFEST.MF: Changed version to 0.1.0.
	* build.properties: Include about.html and icons.