@@ -42,8 +42,6 @@ public class MassifParser extends AbstractValgrindTextParser {
 	private static final String COLON = ":"; //$NON-NLS-1$
 	private static final String SPACE = " "; //$NON-NLS-1$
 	private static final String EQUALS = "="; //$NON-NLS-1$
-	private static final String DOT = "."; //$NON-NLS-1$
-
 	protected Integer pid;
 	protected MassifSnapshot[] snapshots;
 
@@ -58,13 +56,7 @@ public class MassifParser extends AbstractValgrindTextParser {
 		
 		// retrive PID from filename
 		String filename = inputFile.getName();
-		String pidstr = filename.substring(MassifLaunchDelegate.OUT_PREFIX.length(), filename.indexOf(DOT));
-		if (isNumber(pidstr)) {
-			pid = new Integer(pidstr);
-		}
-		else {
-			throw new IOException(Messages.getString("MassifParser.Cannot_parse_PID")); //$NON-NLS-1$
-		}
+		pid = parsePID(filename, MassifLaunchDelegate.OUT_PREFIX);
 		
 		// parse contents of file
 		while ((line = br.readLine()) != null) {
