@@ -1,6 +1,5 @@
 MassifLaunchDelegate.Error_parsing_output=Error parsing output
 MassifLaunchDelegate.Retrieving_massif_data_dir=Retrieving massif data dir failed.
-MassifParser.Cannot_parse_PID=Cannot parse PID from output file
 MassifParser.Parsing_massif_output_failed=Parsing massif output failed on line: {0}
 MassifParser.Snapshot_n=Snapshot {0} - {1}
 MassifParser.Unexpected_EOF=Unexpected EOF
